fix: fix blog item container width, blog item text align title

--- a/src/scss/components/post-list.scss
+++ b/src/scss/components/post-list.scss
@@ -1,4 +1,8 @@
-.single-post, .single-podcasts{
+.single-post{}
+.single-podcasts{
+	.text-banner{
+		text-align: center;
+	}
 	.text-banner{
 		text-align: center;
 	}
